fix: reduce gap between social media icons in footer

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1138,7 +1138,7 @@
 
 .page__flap-socials-list {
     display: flex;
-    gap: 1rem;
+    gap: .25rem;
 }
 
 .page__flap-socials-list {
